force-app/main/default/objects/OCE__Affiliation__c/OCE__Affiliation__c.object-meta.xml
<CustomObject>
    <description>Affiliation, i.e. connection between all possible permutations of HCP and HCO.</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AFF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>