force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Affiliation_CrosswalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Affiliation_CrosswalkId__c</fullName>
    <externalId>true</externalId>
    <label>Affiliation CrosswalkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>