force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_AffiliationPhoneId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_AffiliationPhoneId__c</fullName>
    <label>AffiliationPhoneId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>