force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_AffiliationRoleId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_AffiliationRoleId__c</fullName>
    <label>AffiliationRoleId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>