force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Child_SourceBlockStatus__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Child_SourceBlockStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child SourceBlockStatus</label>
    <type>Checkbox</type>
</CustomField>