force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ChildCrosswalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ChildCrosswalkId__c</fullName>
    <label>ChildCrosswalkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>