force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ChildCustomerType__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ChildCustomerType__c</fullName>
    <label>ChildCustomerType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>HCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>