force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ChildUniqueId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ChildUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>ChildUniqueId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>