force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_CrosswalkSource__c.field-meta.xml
<CustomField>
    <fullName>Lilly_CrosswalkSource__c</fullName>
    <label>CrosswalkSource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA_OUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>