force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Currently_Seeing_Patients__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Currently_Seeing_Patients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Seeing Patients</label>
    <type>Checkbox</type>
</CustomField>