force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_DataValidationStatusCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_DataValidationStatusCode__c</fullName>
    <label>DataValidationStatusCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>