force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ECDP_Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ECDP_Active_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ECDP Active Flag</label>
    <type>Checkbox</type>
</CustomField>