force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ECDP_Affiliation_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ECDP_Affiliation_Id__c</fullName>
    <externalId>true</externalId>
    <label>ECDP Affiliation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>