force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_HCP_Certified_Doc_Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Certified_Doc_Reg_Date__c</fullName>
    <label>HCP Certified Doc Reg Date</label>
    <type>Date</type>
</CustomField>