force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_HCP_Registration_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Registration_Date_and_Time__c</fullName>
    <label>HCP Registration Date and Time</label>
    <type>DateTime</type>
</CustomField>