force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_HCP_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Reserve__c</fullName>
    <label>HCP Reserve</label>
    <length>100</length>
    <type>Text</type>
</CustomField>