force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_HCP_Society_Code__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Society_Code__c</fullName>
    <label>HCP Society Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>