force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_HCP_Society_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Society_Maintenance_Date__c</fullName>
    <label>HCP Society Maintenance Date</label>
    <type>Date</type>
</CustomField>