force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_HCP_Society_Year__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Society_Year__c</fullName>
    <label>HCP Society Year</label>
    <type>Date</type>
</CustomField>