force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_HCP_specialist_Doctor_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_specialist_Doctor_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCP specialist Doctor Flag</label>
    <type>Checkbox</type>
</CustomField>