force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Hcp_UniqueId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Hcp_UniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Hcp UniqueId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>