force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Hierarchy__c</fullName>
    <label>Hierarchy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>