force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Parent_SourceBlockStatus__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Parent_SourceBlockStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent SourceBlockStatus</label>
    <type>Checkbox</type>
</CustomField>