force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ParentCountryCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ParentCountryCode__c</fullName>
    <label>ParentCountryCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>