force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ParentCrosswalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ParentCrosswalkId__c</fullName>
    <label>ParentCrosswalkId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>