force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ParentCustomerType__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ParentCustomerType__c</fullName>
    <label>ParentCustomerType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>