force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ParentTypeCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ParentTypeCode__c</fullName>
    <label>ParentTypeCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>