force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_ChildCountryCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_ChildCountryCode__c</fullName>
    <label>Phone ChildCountryCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>