force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_ChildUniqueId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_ChildUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Phone ChildUniqueId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>