force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_CreatedDate__c</fullName>
    <label>Phone CreatedDate</label>
    <type>Date</type>
</CustomField>