force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_CrosswalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_CrosswalkId__c</fullName>
    <label>Phone CrosswalkId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>