force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_EffectiveEndDate__c</fullName>
    <label>Phone EffectiveEndDate</label>
    <type>Date</type>
</CustomField>