force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_EffectiveStartDate__c</fullName>
    <label>Phone EffectiveStartDate</label>
    <type>Date</type>
</CustomField>