force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>