force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_ParentUniqueId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_ParentUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Phone ParentUniqueId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>