force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_Source__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_Source__c</fullName>
    <label>Phone Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>