force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_Type__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WORK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>