force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Phone_UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Phone_UpdatedDate__c</fullName>
    <label>Phone UpdatedDate</label>
    <type>Date</type>
</CustomField>