force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_RelationshipGroupTypeCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_RelationshipGroupTypeCode__c</fullName>
    <label>RelationshipGroupTypeCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>