force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_RelationshipTypeCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_RelationshipTypeCode__c</fullName>
    <label>RelationshipTypeCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>