force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_ChildUniqueId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_ChildUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Role ChildUniqueId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>