force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_CreatedDate__c</fullName>
    <label>Role CreatedDate</label>
    <type>Date</type>
</CustomField>