force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_CrosswalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_CrosswalkId__c</fullName>
    <label>Role CrosswalkId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>