force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_EffectiveEndDate__c</fullName>
    <label>Role EffectiveEndDate</label>
    <type>Date</type>
</CustomField>