force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_EffectiveStartDate__c</fullName>
    <label>Role EffectiveStartDate</label>
    <type>Date</type>
</CustomField>