force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_ParentCrosswalkSource__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_ParentCrosswalkSource__c</fullName>
    <label>Role ParentCrosswalkSource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA_OUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>