force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_ParentPrivacyStatus__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_ParentPrivacyStatus__c</fullName>
    <label>Role ParentPrivacyStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>