force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_Rank__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_Rank__c</fullName>
    <label>Role Rank</label>
    <length>12</length>
    <type>Text</type>
</CustomField>