force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_Source__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_Source__c</fullName>
    <label>Role Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>