force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_UpdatedDate__c</fullName>
    <label>Role UpdatedDate</label>
    <type>Date</type>
</CustomField>