force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Role_ValidationReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role_ValidationReasonCode__c</fullName>
    <label>Role ValidationReasonCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>