force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Skip_Cross_WalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Skip_Cross_WalkId__c</fullName>
    <externalId>true</externalId>
    <label>Skip Cross WalkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>