force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_Skip_Privacy_Status__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Skip_Privacy_Status__c</fullName>
    <label>Skip Privacy Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>