force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_SkipCrosswalkSource__c.field-meta.xml
<CustomField>
    <fullName>Lilly_SkipCrosswalkSource__c</fullName>
    <label>SkipCrosswalkSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>