force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_SkipId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_SkipId__c</fullName>
    <label>SkipId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>