force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_SkipUniqueId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_SkipUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>SkipUniqueId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>