force-app/main/default/objects/OCE__Affiliation__c/fields/Lilly_ValidationReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_ValidationReasonCode__c</fullName>
    <label>ValidationReasonCode</label>
    <length>211</length>
    <type>Text</type>
</CustomField>