force-app/main/default/objects/OCE__Affiliation__c/fields/OCE1__WholesalerERPAccountId__c.field-meta.xml
<CustomField>
    <fullName>OCE1__WholesalerERPAccountId__c</fullName>
    <description>Use the wholesaler’s ERP account ID when referring an OCE P account.</description>
    <inlineHelpText>Use the wholesaler’s ERP account ID when referring an OCE P account.</inlineHelpText>
    <label>Wholesaler&apos;s ERP Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>