force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__BlockAffiliationVR__c.field-meta.xml
<CustomField>
    <fullName>OCE__BlockAffiliationVR__c</fullName>
    <description>OOB formula field to use for blocking VR creation if true.</description>
    <formula>ISPICKVAL(OCE__AffiliationType__c, &apos;soft&apos;)</formula>
    <inlineHelpText>OOB formula field to use for blocking VR creation if true.</inlineHelpText>
    <label>Block Affiliation VR</label>
    <type>Checkbox</type>
</CustomField>