force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__Color__c.field-meta.xml
<CustomField>
    <fullName>OCE__Color__c</fullName>
    <description>Color to display Affiliation, e.g. on graph view.</description>
    <formula>IF(
    /* personal */
    AND(OCE__From__r.IsPersonAccount, OCE__To__r.IsPersonAccount),
    &quot;#008000&quot;,
    IF(
        /* business */
        AND( NOT(OCE__From__r.IsPersonAccount), NOT(OCE__To__r.IsPersonAccount) ),
        &quot;#808080&quot;,
        &quot;#0000FF&quot;
    )

)</formula>
    <inlineHelpText>Color to display affiliation, e.g. on graph view.</inlineHelpText>
    <label>Color</label>
    <type>Text</type>
</CustomField>