force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__CountryCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__CountryCode__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Country Picklist Field</description>
    <inlineHelpText>Country of the Affiliation.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>