force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__CreateInsDoc__c.field-meta.xml
<CustomField>
    <fullName>OCE__CreateInsDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An Affiliation having this flag true and satisfies Ins Doc requirements leads to creation of an INS-DOC Account</description>
    <inlineHelpText>Enable this flag to create an Ins Doc Account.</inlineHelpText>
    <label>Create INS-DOC</label>
    <type>Checkbox</type>
</CustomField>