force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__CreationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__CreationDate__c</fullName>
    <description>Creation Date</description>
    <inlineHelpText>Creation Date</inlineHelpText>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>