force-app/main/default/objects/OCE__Affiliation__c/fields/OCE__DCCMember__c.field-meta.xml
<CustomField>
    <fullName>OCE__DCCMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Doc DCC Member</description>
    <inlineHelpText>Doc DCC Member</inlineHelpText>
    <label>Doc DCC Member</label>
    <type>Checkbox</type>
</CustomField>